--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.container {
+  max-width: 350px;
+  padding: 0.5em 0.9em 0.5em 0.5em;
+  margin: 0 auto;
+}
