--- a/code/src/thought.css
+++ b/code/src/thought.css
@@ -6,10 +6,9 @@ p {
   font-size: 0.9em;
 }
 
-.container {
-  width: 350px;
+.thought {
   border: solid 1px black;
-  margin: 2em auto;
+  margin: 2em 0;
   box-shadow: 6px 6px black;
   font-family: "Courier New", Courier, monospace;
   padding: 0.9em;
