--- a/code/src/index.css
+++ b/code/src/index.css
@@ -36,7 +36,7 @@ main {
 .form-container {
   margin-bottom: 2rem;
   background: #f2f0f0;
-  height: 12rem;
+  height: 13rem;
 }
 
 .form-container,
@@ -77,6 +77,7 @@ main {
   width: 95%;
   height: 3rem;
   padding: 1rem;
+  margin-top: 1rem;
 }
 
 .single-message {
