--- a/code/src/happy.css
+++ b/code/src/happy.css
@@ -3,8 +3,8 @@
 }
 
 .mainContainer {
-    width: 100%;
-    display: flex;
+    width: 600px;
+    margin: 0 auto;
 }
 
 article {
@@ -15,4 +15,28 @@ article {
     box-shadow: 8px 8px 0px rgba(0, 0, 0, .5);
     border: 1px solid pink;
     margin-bottom: 40px;
+    letter-spacing: 2px;
+}
+
+button.theHeart {
+    font-size: 1.6rem;
+    border: 1 px solid black;
+    border-radius: 50%;
+    background-color: silver;
+}
+
+span {
+    position: relative;
+    top: 2px;
+    margin: 0;
+    padding: 0px;
+}
+
+.theDate {
+    text-align: right;
+}
+
+.noLikes {
+    position: relative;
+    left: 4px;
 }
