like styling not working

--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -1,13 +1,45 @@
 button{
-  background: #ffadad;
-  border-radius: 20px;
-  padding: 12px;
-  box-sizing: none;
-  border: none;
-  align-self: flex-start;
-  margin: 12px;
+ background: #ffadad;
+ border-radius: 20px;
+ padding: 12px;
+ box-sizing: none;
+ border: none;
+ align-self: flex-start;
+ margin: 0 0 12px 12px;
 }
 
 button:focus{
-  outline: 1px solid #cecece;
+ outline: 1px solid #cecece;
+} 
+
+form{
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-end;
+ align-items: center;
+}
+
+  form p{
+  margin: 0 12px 0 0;
   }
+
+  textarea{
+  width: 270px;
+  margin: 12px 12px 5px 12px;
+  resize: none;
+  padding: 12px;
+  }
+  
+  textarea:focus{
+  outline: none; 
+  }
+
+.message{
+ width:320px;
+ background: #f2f0f0;
+ border: 1px solid black;
+ box-shadow: 7px 7px;
+ display: flex;
+ flex-direction: column;
+ margin: 20px;
+ }
