--- a/code/src/HappyThoughts.css
+++ b/code/src/HappyThoughts.css
@@ -1,38 +1,47 @@
 article{
-  font-family: 'Roboto Mono', monospace;
-  margin: 20px;
-  width:320px;
-  /* height: 150px; */
-  background: #FFF;
-  border: 1px solid black;
-  box-shadow: 7px 7px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding: 0 5px 0 0;
+ font-family: 'Roboto Mono', monospace;
+ margin: 20px;
+ width:320px;
+ background: #FFF;
+ border: 1px solid black;
+ box-shadow: 7px 7px;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+ padding: 0 5px 0 0;
+}
+
+.messageLive{
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: space-between;
+ margin: 0 0 2px 0;
 }
 
 .countContainer{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
 }
 
-.likeButton{
-  border-radius: 50%;
-  background: #eaeaea;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 7px;
+.like-button{
+ border-radius: 50%;
+ background: #eaeaea;
+ width: 50px;
+ height: 50px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ margin-right: 7px;
+}
+
+.has-likes{
+  background: #ffadad;
 }
 
 .count{
-  font-size: 12px;
-  color: #b3b3b3;
-  margin-right: 20px;
-  /* display: inline; */
+ font-size: 12px;
+ color: #b3b3b3;
+ margin-right: 20px;
 }
