--- a/code/src/happyForm.css
+++ b/code/src/happyForm.css
@@ -1,3 +1,49 @@
-body {}
+.happy-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #f3f1f1;
+  border: 2px solid black;
+  box-shadow: 4px 4px black;
+  width: 300px;
+  margin: 13px;
+  padding: 20px;
+}
 
-.happy-form {}
+.happy-form h2 {
+  font-family: 'Inconsolata', monospace;
+  margin: 0;
+}
+
+.happy-form textarea {
+  width: 100%;
+  resize: none;
+  padding: 10px;
+  margin: 10px 0;
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.happy-form button {
+  height: 45px;
+  width: 80%;
+  background-color: #E85D75;
+  border: none;
+  font-family: 'Inconsolata', monospace;
+  font-size: 12px;
+  border-radius: 25px;
+  color: black;
+}
+
+.happy-form button:hover {
+  cursor: pointer;
+  background-color: #F73852;
+}
+
+.form-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
