--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -1,13 +1,13 @@
 .happy-form {
 	background-color: #f3f1f1;
 	border: 2px solid black;
-	box-shadow: 4px 4px black;
+	box-shadow: 6px 6px black;
 	width: 300px;
 	margin: 16px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 20px;
+	padding: 20px 20px 5px 20px;
 }
 
 .happy-form textarea {
@@ -24,8 +24,8 @@
 }
 
 .happy-form button {
-	height: 50px;
-	width: 60%;
+	height: 40px;
+	width: 200px;
 	background-color: #ffadad;
 	border: none;
 	font-size: 14px;
@@ -36,6 +36,8 @@
 
 .happy-form button:hover {
 	cursor: pointer;
+	transform: scale(1.03);
+	transition: 0.2s;
 }
 
 .form-footer {
@@ -43,4 +45,10 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
+}
+
+@media (min-width: 767px) {
+	.happy-form {
+		width: 500px;
+	}
 }
