--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -9,8 +9,8 @@
 }
 
 h1 {
-    font-family: "Courier New", monospace;
-    font-size: 20px;
+    font-family: "Courier", monospace;
+    font-size: 16px;
     margin: 0;
 }
 
