--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -1,6 +1,11 @@
 * {
   font-family: 'Inconsolata', monospace;
 }
+
+body {
+    display: flex;
+    justify-content: center;
+}
 .happy-form {
   background-color: rgb(244, 134, 170);
   border: 2px solid black;
