--- a/code/src/components/likebutton.css
+++ b/code/src/components/likebutton.css
@@ -7,6 +7,15 @@
   cursor: pointer;
 }
 
+.heart-button-liked {
+  border-style: none;
+  background: #ffb3b3;
+  border-radius: 50%;
+  padding: 8px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
 .heart-button:hover {
   background: #ffb3b3;
 }
