--- a/code/src/index.css
+++ b/code/src/index.css
@@ -17,3 +17,11 @@ code {
   padding: 0.5em 0.9em 0.5em 0.5em;
   margin: 0 auto;
 }
+
+header {
+  font-weight: bold;
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  margin-top: 1em;
+}
