--- a/code/src/happyThought.css
+++ b/code/src/happyThought.css
@@ -1,1 +1,25 @@
 /* Box shadow, round button, etc */
+
+article {
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    background:white;
+    border: 1px solid #000;
+    box-shadow: 10px 10px #000;
+    align-items: center;
+    margin: 50px 0;
+}
+.heartsAndDate {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    padding:6px
+}
+div.btnxnr {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    width: 60px;
+}
