--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,6 +6,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.main-wrapper {
+  max-width: 600px;
+  margin: auto;
+  /* border: 2px solid olivedrab; */
 }
 
 code {
