--- a/code/src/happyThought.css
+++ b/code/src/happyThought.css
@@ -23,9 +23,13 @@ div.btnxnr {
     justify-content: space-evenly;
     flex-direction: row;
     width: 60px;
-    border:0;
+    height: 60px;
+    border:none;
+    background-color: transparent;
 }
 button .likesButton {
     width: 30px;
     height: 30px;
+    border: none;
+
 }
