--- a/code/src/happyForm.css
+++ b/code/src/happyForm.css
@@ -31,14 +31,16 @@ svg {
     padding: 10px;
     border-radius: 40px;
     background-color: #ffb3b3;
+    width: auto;
+    height: auto;
 }
 
 .formWrapper {
     padding: 15px;
-    width: 90%;
+    width: 100%;
     height: 100%;
     background: #efefef;
     border: 1px solid #000;
-    box-shadow: 10px 10px #000;
+    box-shadow: 5px 5px #000;
     align-items: center;
 }
