--- a/code/src/happyThought.css
+++ b/code/src/happyThought.css
@@ -2,11 +2,11 @@
 
 article {
     padding: 15px;
-    width: 90%;
+    width: 100%;
     height: 100%;
     background:white;
     border: 1px solid #000;
-    box-shadow: 10px 10px #000;
+    box-shadow: 5px 5px #000;
     align-items: center;
     margin: 50px 0;
 }
@@ -27,9 +27,27 @@ div.btnxnr {
     border:none;
     background-color: transparent;
 }
-button .likesButton {
-    width: 30px;
-    height: 30px;
+.likesButton {
     border: none;
+    border-radius: 40px;
+    border-style: none;
+    width: auto;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+    margin-right: 4px;
 
 }
+
+button span {
+    border-radius: 50px;
+    border-style: none;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    background-color: #ffb3b3;
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+}
+
