--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,6 +13,8 @@ body {
 .main-wrapper {
   max-width: 500px;
   margin: auto;
+  padding: 8px;
+  padding-top: 20px;
   /* border: 2px solid olivedrab; */
 }
 
