Update to my own API and add name

--- a/code/src/components/Hearts.css
+++ b/code/src/components/Hearts.css
@@ -4,7 +4,7 @@
   font-weight:bold;
 }
 
-.like-heart{
+.hearts button{
   font-family: 'Inconsolata', monospace;
   background-color: #eaeaea;
   border: 0px;
