--- a/code/src/components/form.css
+++ b/code/src/components/form.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
 }
 
-textarea {
+textarea, input {
   padding: 7px;
   opacity: 1;
   background: #fff;
@@ -20,7 +20,8 @@ textarea {
   border: 1px solid #93989d;
 }
 
-textarea::placeholder{
+textarea::placeholder, 
+input::placeholder {
 background: #fff;
 height: 100%;
 color: #93989d;
