--- a/code/src/index.css
+++ b/code/src/index.css
@@ -8,7 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: thistle;
+  background-color: rgb(248, 189, 212);
 }
 
 .main-wrapper {
