--- a/code/src/index.css
+++ b/code/src/index.css
@@ -14,6 +14,14 @@ h3 {
   font-size: 15px;
 }
 
+.container {
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 main {
   display: flex;
   flex-direction: column;
