--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -1,5 +1,5 @@
 .happy-form {
-    background-color: #f3f1f1;
+    background-color: rgb(245, 218, 222);
     border: 2px solid black;
     box-shadow: 4px 4px black;
     width: 300px;
