changed with media queries for mobile so the hearts gets centered

--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -42,3 +42,10 @@ span {
   align-items: center;
   justify-content: center; 
 } 
+
+@media (min-width: 375px) and (max-width: 667px) { 
+
+span {
+  margin-left: 3px;
+}
+}
