--- a/code/src/form.css
+++ b/code/src/form.css
@@ -2,12 +2,12 @@
   margin: 0;
 }
 
-.form {
+form {
   background-color: lightgrey;
   border: solid 1px black;
   margin: 2em 0;
   box-shadow: 6px 6px black;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   padding: 0.9em;
 }
 
@@ -25,7 +25,7 @@ input {
   padding: 7px 10px;
   margin-top: 1em;
   border-radius: 25px;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 0.7em;
   display: flex;
   align-items: center;
@@ -33,4 +33,10 @@ input {
 
 .heart {
   margin: 2px;
+}
+
+.errorMessage {
+  color: red;
+  margin-top: 5px;
+  font-weight: bold;
 }
