--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -5,7 +5,8 @@
 body {
     display: flex;
     justify-content: center;
-    background-color: turquoise;
+    background-color: rgb(15, 29, 28);
+    /* background-color: turquoise; */
     /* background-color: paleturquoise; */
 }
 .happy-form {
