--- a/code/src/styling/HappyThoughts.css
+++ b/code/src/styling/HappyThoughts.css
@@ -38,6 +38,10 @@ article{
 
 .like-buttonhas-likes{
   background: #ffadad;
+  margin-right: 7px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
 .count{
