--- a/code/src/scss/style.scss
+++ b/code/src/scss/style.scss
@@ -1,4 +1,3 @@
-$light-color: #fff;
 $grey-circle-color: #eaeaea;
 $pink-circle-color: #ffadad;
 
@@ -9,7 +8,7 @@ $pink-circle-color: #ffadad;
 }
 
 body {
-	background: $light-color;
+	background: #fff;
 	font-family: monospace;
 	line-height: 1.6;
 
@@ -20,10 +19,13 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+
 	width: 400px;
-	height: 150px;
-	margin: auto;
+	height: 125px;
+
+	margin: 20px auto;
 	padding: 10px;
+
 	border: 1px solid #000;
 	box-shadow: 6px 6px 0px #000;
 }
@@ -38,23 +40,29 @@ body {
 		align-items: center;
 		flex-direction: row;
 	}
-
-	span {
-		margin-left: 5px;
-	}
 }
 
-.heart-container {
+.heart-button {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
+	border: none;
 	background-color: #eaeaea;
+	cursor: pointer;
+}
 
-	span {
-		margin-left: 4px;
-		margin-top: 2px;
-	}
+.amount-of-hearts {
+	margin-left: 5px;
+	opacity: 0.5;
+}
+
+.heart {
+	margin-left: 4px;
+}
+
+.time-gone-by {
+	opacity: 0.3;
 }
