--- a/code/src/Components/thoughts.css
+++ b/code/src/Components/thoughts.css
@@ -2,9 +2,9 @@
 
 .thoughts-card {
   /* background-color: #f2f2f2; */
-  width: 450px;
+  width: 500px;
   margin: 1em;
-  padding: 2em;
+  padding: 1.3em 1em 2em 1em;
   border: 2px solid black;
   box-shadow: 6px 6px black;
   font-family: 'Roboto Mono', monospace;
