--- a/code/src/app.css
+++ b/code/src/app.css
@@ -7,3 +7,12 @@ form {
     border: 1px solid black;
     background-color: darkgray;
 }
+.heart {
+    width: 50px;
+    height: 50px;
+    background-color: darkgray;
+    background-image: url("./images/perfectHeart.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
