--- a/code/src/app.css
+++ b/code/src/app.css
@@ -1,3 +1,10 @@
+.app {
+    width: 500px;
+    margin: 0px auto;
+    background-color: lightcoral;
+}
+
+
 form {
     border: 1px solid black;
     background-color: darkgray;
@@ -5,14 +12,29 @@ form {
 
 .card {
     border: 1px solid black;
-    background-color: darkgray;
+    background-color: white;
+    width: 90%;
+    margin: 1em auto;
+    box-shadow: 3px 3px 3px black;
 }
+
+.card div {
+    display: flex;
+}
+.card p{
+    width: 90%;
+    margin: 1em auto;
+}
+
 .heart {
     width: 50px;
     height: 50px;
     background-color: darkgray;
-    background-image: url("./images/perfectHeart.svg");
+    border-radius: 50%;
+    font-size: 1.5em;
+    color: darkred;
+    /* background-image: url("./images/perfectHeart.svg");
     background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
 }
