--- a/code/src/messagepost.css
+++ b/code/src/messagepost.css
@@ -3,7 +3,7 @@
     background-color: #ffadad;
     border-radius: 500px;
     padding: 8px 20px;
-    margin-top: 15px;
+    margin-top: 10px;
     display: block;
 }
 
@@ -11,8 +11,15 @@
 width: 100%;
 padding: 10px;
 font-size: 15px;
+word-break: break-all;
 }
 
 .post-title {
     font-size: 13px;
+    margin-top: 0;
+}
+
+.character-count {
+    font-size: 13px;
+    margin: 5px 0 0 0;
 }
