--- a/code/src/css/style.css
+++ b/code/src/css/style.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
 }
 
-.thought-container {
+.send-thought-container, .thought-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,12 +24,61 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 400px;
-  height: 125px;
   margin: 20px auto;
   padding: 10px;
   border: 1px solid #000;
   -webkit-box-shadow: 6px 6px 0px #000;
           box-shadow: 6px 6px 0px #000;
+}
+
+.two-hearts-button, .heart-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+}
+
+.send-thought-container {
+  height: 170px;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 80%;
+}
+
+.thought-input {
+  height: 60px;
+  border: 1px solid rgba(0, 0, 0, 0.534);
+  padding: 5px;
+  font-family: monospace;
+}
+
+.two-hearts-button {
+  border-radius: 30px;
+  width: 190px;
+  font-size: 14px;
+  background-color: #ffadad;
+}
+
+.thought-container {
+  height: 100px;
 }
 
 .icon-container {
@@ -58,21 +107,9 @@ body {
 }
 
 .heart-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 30px;
-  height: 30px;
   border-radius: 50%;
-  border: none;
+  width: 40px;
   background-color: #eaeaea;
-  cursor: pointer;
 }
 
 .amount-of-hearts {
@@ -82,6 +119,7 @@ body {
 
 .heart {
   margin-left: 4px;
+  font-size: 16px;
 }
 
 .time-gone-by {
