--- a/code/src/app.css
+++ b/code/src/app.css
@@ -13,18 +13,37 @@ form {
 .card {
     border: 1px solid black;
     background-color: white;
+    color: darkgray;
+    box-shadow: 3px 3px 3px black;
     width: 90%;
     margin: 1em auto;
-    box-shadow: 3px 3px 3px black;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 1em;
 }
 
 .card div {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
     display: flex;
 }
-.card p{
-    width: 90%;
-    margin: 1em auto;
+.card p:nth-child(1) {
+    color: black;
 }
+
+.messsage {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    color: black;
+}
+
+.time {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    justify-self: end;
+}
+
 
 .heart {
     width: 50px;
