--- a/code/src/app.css
+++ b/code/src/app.css
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    margin-bottom: 20px;
 }
 
 .thoughts-container {
@@ -22,7 +24,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     color: grey;
     font: .8em helvetica;
 }
