--- a/code/src/messagepost.css
+++ b/code/src/messagepost.css
@@ -5,10 +5,18 @@
     padding: 8px 20px;
     margin-top: 10px;
     display: block;
+    cursor: pointer;
+}
+
+.post-button:disabled {
+opacity: .5;
+cursor: default;
 }
 
 .post-text {
 width: 100%;
+min-width: 100%;
+max-width: 100%;
 padding: 10px;
 font-size: 15px;
 word-break: break-all;
