--- a/code/src/app.css
+++ b/code/src/app.css
@@ -11,7 +11,7 @@
 }
 
 .thoughts-container {
-    width: 50%;
+    width: 90%;
     border: 1px solid black;
     box-shadow: 5px 5px;
     margin-top: 30px;
@@ -31,4 +31,10 @@
 
 .form {
     background-color: #f2f0f0;
+}
+
+@media (min-width: 680px) {
+    .thoughts-container {
+        width: 50%;
+    }
 }
