--- a/code/src/app.css
+++ b/code/src/app.css
@@ -1,59 +1,35 @@
 .app {
     width: 500px;
     margin: 0px auto;
-    background-color: lightcoral;
 }
 
 
 form {
     border: 1px solid black;
-    background-color: darkgray;
-}
-
-.card {
-    border: 1px solid black;
-    background-color: white;
-    color: darkgray;
+    background-color: lightgray;
     box-shadow: 3px 3px 3px black;
+    padding: 1em;
     width: 90%;
     margin: 1em auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    padding: 1em;
-}
-
-.card div {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
     display: flex;
+    flex-direction: column;
 }
-.card p:nth-child(1) {
-    color: black;
+form button {
+    width: 150px;
+    height: 3em;
+    background-color: lightcoral;
+    border-radius: 15px;
+}
+span {
+    color: red;
+    font-size: 1.2em;
+}
+form input {
+    width: 90%;
+    height: 2.5em;
+    margin: 1em auto;
+}
+form p{
+    margin: 0px ;
 }
 
-.messsage {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-    color: black;
-}
-
-.time {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    justify-self: end;
-}
-
-
-.heart {
-    width: 50px;
-    height: 50px;
-    background-color: darkgray;
-    border-radius: 50%;
-    font-size: 1.5em;
-    color: darkred;
-    /* background-image: url("./images/perfectHeart.svg");
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat; */
-}
