--- a/code/src/css/app.css
+++ b/code/src/css/app.css
@@ -7,6 +7,58 @@ body {
   font-size: 16px;
 }
 
+h1, h2 {
+  font-weight: 400;
+}
+
 h2 {
   font-size: 1.2rem;
 }
+
+.wrapper {
+  width: 90%;
+  max-width: 768px;
+  margin: auto;
+}
+
+.thoughts-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.thought-card {
+  position: relative;
+  flex: 0 1 auto;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  margin-top: 3rem;
+  padding: .5rem 1rem;
+  border: 1px solid #000;
+  background-color: #fff;
+}
+
+.thought-card h2 {
+  flex-basis: 100%;
+}
+.thought-card span {
+  flex: 0 1 auto;
+}
+.thought-card p {
+  flex: 0 1 auto;
+}
+
+.thought-card::before {
+  position: absolute;
+  z-index: -1;
+  content: '';
+  bottom: -.5rem;
+  left: .5rem;
+
+  width: 100%;
+  height: 95%;
+  background-color: #000;
+}
+
