--- a/code/src/components/formstyle.css
+++ b/code/src/components/formstyle.css
@@ -5,7 +5,27 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: white;
+  /* background-color: white; */
+  background: rgb(225,214,226);
+  background: linear-gradient(0deg, rgba(225,214,226,0.8710040983606557) 5%, rgba(255,255,255,1) 100%) no-repeat;
+  scroll-behavior: smooth;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wordCount {
+  width: 400px;
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+}
+
+.wordCount p {
+  margin: 10px 0px 0px 0px;
 }
 
 .happy {
@@ -14,10 +34,6 @@ body {
   box-shadow: 6px 6px black;
   width: 400px;
   margin: 30px 0px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
   padding: 20px;
 }
 
@@ -28,7 +44,7 @@ body {
   font-size: 14px;
   box-sizing: border-box;
   border: none;
-  margin: 10px 0;
+  margin-top: 10px;
   border-radius: 20px;
   resize: none;
   font-family: 'Menlo', sans-serif;
@@ -48,11 +64,11 @@ body {
   background-color: rgb(255, 255, 255);
   border: none;
   font-size: 14px;
-  font-weight: 500px;
   border-radius: 25px;
   padding: 10px;
   color: black;
-  margin: 10px;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 .happy button:hover {
