--- a/code/src/components/toughtcard.css
+++ b/code/src/components/toughtcard.css
@@ -19,6 +19,29 @@
   width: 40vw;
 }
 
-p {
+.toughtCardLike {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 16px;
+}
+
+.toughtCardLikeIcon {
+  cursor: pointer;
+}
+
+.toughtCardLikeIcon:hover {
+  animation: pulse 1s infinite;
+  animation-timing-function: linear;   
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1);
+  100% { transform: scale(1); }
+  }
+}
+
+.toughtText {
   margin: 16px;
 }
