--- a/code/src/css/app.css
+++ b/code/src/css/app.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Roboto Mono';
-  font-size: 16px;
+  font-size: 14px;
 }
 
 h1, h2 {
@@ -62,3 +62,14 @@ h2 {
   background-color: #000;
 }
 
+.like-btn {
+  width: 2.8rem;
+  height: 2.8rem;
+  margin-right: 1rem;
+  padding-left: .7rem;
+  padding-top: .2rem;
+  font-size: 1.2rem;
+  background-color: #eaeaea;
+  border: 0;
+  border-radius: 50%;
+}
