--- a/code/src/postcard.css
+++ b/code/src/postcard.css
@@ -9,9 +9,10 @@
   box-shadow: 4px 4px #000;
   max-width: 430px;
   width: 90%;
-  height: 110px;
+  height: 100%;
   margin: 16px;
   justify-content: space-between;
   padding: 10px;
   box-sizing: border-box;
 }
+
