--- a/code/src/css/app.css
+++ b/code/src/css/app.css
@@ -26,7 +26,8 @@ h2 {
   flex-direction: column;
 }
 
-.thought-card {
+.thought-card,
+.post-thought {
   position: relative;
   flex: 0 1 auto;
 
@@ -50,7 +51,8 @@ h2 {
   flex: 0 1 auto;
 }
 
-.thought-card::before {
+.thought-card::before,
+.post-thought::before {
   position: absolute;
   z-index: -1;
   content: '';
@@ -72,4 +74,14 @@ h2 {
   background-color: #eaeaea;
   border: 0;
   border-radius: 50%;
+}
+
+.post-thought {
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #eaeaea;
+}
+
+.post-thought > * {
+  flex: 0 1 auto;
 }
