--- a/code/src/css/app.css
+++ b/code/src/css/app.css
@@ -15,6 +15,10 @@ h2 {
   font-size: 1.2rem;
 }
 
+button {
+  cursor: pointer;
+}
+
 .wrapper {
   width: 90%;
   max-width: 768px;
@@ -35,7 +39,7 @@ h2 {
   flex-wrap: wrap;
   justify-content: space-between;
 
-  margin-top: 3rem;
+  margin-top: 2.5rem;
   padding: .5rem 1rem 1rem;
   border: 1px solid #000;
   background-color: #fff;
@@ -79,9 +83,34 @@ h2 {
 .post-thought {
   flex-direction: column;
   align-items: flex-start;
+  padding: 1.5rem 1rem;
   background-color: #eaeaea;
 }
 
 .post-thought > * {
   flex: 0 1 auto;
+}
+
+label {
+  font-weight: 500;
+}
+
+textarea {
+  width: 100%;
+  height: 60px;
+  margin: 1rem 0;
+  padding: .6rem .8rem;
+  font-family: inherit;
+  resize: none;
+  border: 1px solid #a0a0a0;
+}
+
+.post-btn {
+  padding: .6rem 1rem .8rem;
+  border-radius: 30px;
+  background-color: #FFADAD;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 500;
+  border: 0;
 }
