--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,3 +3,31 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background: rgb(34,193,195);
+  background: linear-gradient(323deg, rgba(34,193,195,1) 0%, rgba(253,214,45,1) 91%);
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+main {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 500px;
+}
+
+form {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
