--- a/code/src/components/toughtform.css
+++ b/code/src/components/toughtform.css
@@ -3,18 +3,26 @@ textarea {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 24px;
 }
-
 
 .toughtForm {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   margin: 2vw;
-  height: 20vh;
+  height: 30vh;
   width: 40vw;
   border: 1px solid black;
   background-color: #fff;
   box-shadow: 10px 10px;
 }
+
+.sendToughtButton {
+  cursor: pointer;
+  padding: 8px;
+  margin-left: 16px;
+  border-radius: 15px;
+  background-color: #FFADAD;
+}
+
 
