--- a/code/src/css/style.css
+++ b/code/src/css/style.css
@@ -12,6 +12,51 @@ body {
   margin: 0;
 }
 
+h1 {
+  text-shadow: -4px -4px 2px #c03c3c, 4px -4px 2px #c03c3c, -4px 4px 2px #c03c3c, 4px 4px 2px #c03c3c;
+  text-align: center;
+  color: white;
+  font-size: 80px;
+  position: relative;
+  z-index: 10;
+}
+
+.p-red {
+  color: #c03c3c;
+  font-weight: 700;
+}
+
+.p-blue {
+  color: #3cc068;
+  font-weight: 700;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-image: url("../images/Hearts-Background.svg");
+  height: 200px;
+  position: relative;
+  z-index: 1;
+  -webkit-transition: background 0.5s linear;
+  transition: background 0.5s linear;
+}
+
+.layer-header {
+  position: absolute;
+  z-index: 5;
+  background-color: rgba(228, 226, 226, 0.5);
+  height: 100%;
+  width: 100%;
+}
+
 .send-thought-container, .thought-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -31,7 +76,7 @@ body {
           box-shadow: 6px 6px 0px #000;
 }
 
-.two-hearts-button, .heart-button {
+.two-hearts-button, .heart-button-no-like, .heart-button-like {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,6 +93,18 @@ body {
 
 .send-thought-container {
   height: 170px;
+}
+
+.btn-and-count-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 form {
@@ -78,7 +135,7 @@ form {
 }
 
 .thought-container {
-  height: 100px;
+  height: 130px;
 }
 
 .icon-container {
@@ -106,10 +163,25 @@ form {
           flex-direction: row;
 }
 
-.heart-button {
+.heart-button-no-like {
   border-radius: 50%;
   width: 40px;
   background-color: #eaeaea;
+}
+
+.heart-button-like {
+  border-radius: 50%;
+  width: 40px;
+  background-color: #ffadad;
+}
+
+.heart-button-no-like:hover {
+  background-color: #acacac;
+}
+
+.heart-button-like:hover,
+.two-hearts-button:hover {
+  background-color: #ff6868;
 }
 
 .amount-of-hearts {
