--- a/code/src/components/card.css
+++ b/code/src/components/card.css
@@ -27,6 +27,12 @@
     color: black;
 }
 
+.liked {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    justify-self: end;
+}
+
 .time {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
