--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
   monospace;
 }
+.WrapperDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.HappyThoughtsCard{
+  width: 90%;
+  border: solid 1px rgb(235, 235, 64);
+  margin: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+li {
+  list-style: none;
+}
+
+.HappyThoughtInput {
+  width: 90%;
+  border: solid 1px rgb(235, 235, 64);
+  margin: 4px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
