--- a/code/src/index.css
+++ b/code/src/index.css
@@ -29,8 +29,13 @@ justify-content: center;
  margin: 20px 20px;
  padding: 20px 20px;
   border: 2px solid black;
-  background-color: blanchedalmond;
+  background-color: whitesmoke;
+}
 
+.send-button {
+padding: 6px 10px;
+border-radius: 16px;
+background-color: lightpink;
 
 }
 
