--- a/code/src/index.css
+++ b/code/src/index.css
@@ -8,3 +8,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+footer {
+  padding: 40px;
+  text-align: center;
+}
