--- a/code/src/postcard.css
+++ b/code/src/postcard.css
@@ -6,13 +6,19 @@
 
 .message-card {
   border: 2px solid #000;
-  box-shadow: 4px 4px #000;
+  box-shadow:  5px 10px #000;
   max-width: 430px;
   width: 90%;
   height: 100%;
   margin: 16px;
   justify-content: space-between;
-  padding: 10px;
-  box-sizing: border-box;
+  padding: 15px;
 }
 
+.message-footer {
+  display: flex;
+  align-items: center;
+  color: #a6a6a6;
+  font-size: 12 px;
+}
+  
