--- a/code/src/posting.css
+++ b/code/src/posting.css
@@ -39,10 +39,11 @@ textarea {
   font-weight: 700;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 svg {
-  margin:0px 5px;
+  margin:5px;
 }
 
 svg path {
