--- a/code/src/components/form.css
+++ b/code/src/components/form.css
@@ -3,7 +3,7 @@ display: flex;
 flex-direction: column;
 padding: 20px;
 background-color: #eceae7;
-width: 25%;
+width: 70%;
 }
 
 .send-love-button {
@@ -16,4 +16,11 @@ padding: 5px;
 
 .input-text {
   height: 50px;
+}
+
+@media ( min-width: 900px) {
+ 
+form {
+  width: 50%;
+}
 }
