--- a/code/src/components/postedstyle.css
+++ b/code/src/components/postedstyle.css
@@ -26,11 +26,11 @@
   display: inline-flex; 
   justify-content: center;
   background: white;
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
   border-radius: 50%;
   margin-right: 10px;
-  border-color:  white;
+  border: none;
   transition: all .4s ease-in-out;
 }
 
